--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <header>
       <h1>Cricket Match Schedule</h1>
       <!-- Search Bar -->
-      <!-- <div class="search-container">
-        <input type="text" placeholder="Search team or match..." class="search-input">
-        <button class="search-btn">Search</button>
-      </div> -->
+      <div class="search-container">
+        <input type="text" placeholder="Search team or match..." class="search-input" id="search-input">
+      </div>
     </header>
 
     <div class="card-container"></div>
